tests/ui/pattern/multiline_arm_span.stderr
error: unreachable pattern
  --> $DIR/multiline_arm_span.rs:7:9
   |
LL |           irrefutable => {}
   |           ^^^^^^^^^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL | /         other_irrefutable => {
LL | |
LL | |
LL | |             // a big and beautiful multi line match arm
LL | |             todo!()
LL | |         }
   | |_________^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/multiline_arm_span.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

